# Bamboozle

./: .gitignore  Bamboozle.slnx  Cargo.toml  DOCKER_HUB_README.md  README.md  badge-docker-size.json  badge-startup.json  docker-compose.dcproj  launchSettings.json  llm.txt
.cargo/: config.toml
.github/: dependabot.yml  labeler.yml
.github/scripts/: generate-badges.py  generate-report.py
.github/workflows/: badge-update.yml  ci.yml  dotnet-ci.yml  dotnet-release.yml  k6.yml  lint.yml  main-label-badge-update.yml  main-test-example-fault-tolerance.yml  main-test-example-keyvault.yml  main-test-k6.yml  nightly.yml  npm-release.yml  playwright.yml  pr-label-autotagger.yml  pr-label-title-lint.yml  pr-labeler.yml  pr-report.yml  pr-test-dotnet.yml  pr-test-playwright.yml  pr-test-scripts.yml  pr-test-unit.yml  publish-cron-nightly.yml  publish-tag-app.yml  publish-tag-dotnet.yml  publish-tag-npm.yml  release.yml  reusable-create-release.yml  startup-time.yml
Bamboozle/: Bamboozle.csproj  Bamboozle.http  Program.cs
Bamboozle/Controllers/: ControlController.cs
bamboozle/: .gitignore  Cargo.toml  Dockerfile  README.md
bamboozle-cert/: Cargo.toml
bamboozle-cert/src/: main.rs
bamboozle-rust/: Cargo.toml  docker-compose.yml
bamboozle-rust/.cargo/: config.toml
bamboozle-rust/src/: app_state.rs  config.rs  config_loader.rs  expression.rs  main.rs
bamboozle-rust/src/control/: handlers.rs  mod.rs
bamboozle-rust/src/models/: config_file.rs  mod.rs
bamboozle-rust/src/routing/: store.rs
bamboozle-rust/src/tracking/: tracker.rs
bamboozle-rust/testConfigs/: TestConfig1.yml
bamboozle/.cargo/: config.toml
bamboozle/src/: app_state.rs  cert.rs  config.rs  config_loader.rs  error.rs  expression.rs  liquid_render.rs  main.rs  mock_server.rs
bamboozle/src/control/: handlers.rs  mod.rs  ui.html
bamboozle/src/models/: context.rs  match_key.rs  mod.rs  route.rs  simulation.rs
bamboozle/src/routing/: mod.rs  regex_gen.rs  store.rs
bamboozle/src/tracking/: tracker.rs
docs/contributing/: adding-a-feature.md  building.md  index.md  request-lifecycle.md  testing.md
docs/explanation/: how-it-works.md  state-chaining.md
docs/how-to/: assert-calls.md  configure-logging.md  enable-tls.md  load-static-config.md  manage-routes.md  simulate-faults.md  write-responses.md
docs/reference/: control-api.md  environment-variables.md  expression-syntax.md  route-definition.md
docs/tutorials/: first-mock.md
examples/azure-keyvault/: AzureKeyVaultExample.csproj  KeyVaultTests.cs  README.md  docker-compose.yml  routes.yaml  runme.sh
examples/fault-demo/: README.md  docker-compose.yml  package-lock.json  package.json  runme.sh  tsconfig.json  vitest.config.ts
playwright/: package-lock.json  package.json  playwright.config.ts
playwright/tests/: assert.spec.ts  example.spec.ts  file-response.spec.ts  previous-context.spec.ts  prevous-context.spec.ts  release-workflow.spec.ts  response.spec.ts  sessions.spec.ts  simulation.spec.ts
scripts/: .dev.sh  .perf-test.sh  backfill-pr-labels.sh  docker-compose.dev.yml  load.sh  perf-test.sh  test-startup-local.sh
scripts/perf-test/: test-startup.sh
scripts/test_configs/: test-config-2.json  test-config-3.yaml
sdks/: README.md
sdks/npm/: README.md  package-lock.json  package.json  tsconfig.json
sdks/npm/src/: assert.ts  (+4 more)
src/: docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml
src/Bamboozle/: Bamboozle.csproj  Consts.cs  Dockerfile  Program.cs  appsettings.Development.json
src/Bamboozle.Tests/: Bamboozle.Tests.csproj  FilterParserTests.cs  MemCacheProviderTests.cs  RouteRegexGeneratorTests.cs  UnitTest1.cs
(+51 files in other folders)
