[package]
name = "bamboozle-cert"
version = "0.1.0"
edition = "2021"
description = "Generate self-signed TLS certificates for use with Bamboozle"

[[bin]]
name = "bamboozle-cert"
path = "src/main.rs"

[dependencies]
rcgen = { version = "0.13", features = ["pem"] }
clap = { version = "4", features = ["derive"] }
time = "0.3"
