[package]
name = "bamboozle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bamboozle"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dashmap = "6"
regex = "1"
liquid = "0.26"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
form_urlencoded = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
