[package]
name = "bamboozle"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "bamboozle"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "macros"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dashmap = "6"
regex = "1"
liquid = "0.26"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
strsim = "0.11"
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }
utoipa = { version = "5", features = ["axum_extras"] }
form_urlencoded = "1"
evalexpr = "13"
rand = "0.9"
rand_distr = "0.5"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }

[features]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
